structure finished + semantic

--- a/index.html
+++ b/index.html
@@ -10,38 +10,41 @@
       <!-- <img src="bg_top_greyscale_full.png" alt=""> -->
       <header class="header">
         <div class="logo-Blinder">
-          <img src="img/logo_blinder.png" alt="logo-blinder-app">
+          <img src="img/logo_blinder.png" alt="img-logo-blinder-app">
         </div>
         <div class="text-title">
-          <p>Find your perfect match</p>
-          <p>Discover quality profiles specifically handpicked for you.</p>
+          <h1>Find your perfect match</h1>
+          <h4>Discover quality profiles specifically handpicked for you.</h4>
         </div>
       </div>
       <main class="content">
         <div class="calltoaction-top">
-          <img src="mockup_mobile_app.png" alt="mockup-mobile-app">
+          <img src="mockup_mobile_app.png" alt="img-mockup-mobile-app">
           <!-- carrousel 1 to 3 pictures using bootstrap -->
-          <p>Hey! Download here and start to looking for someone similar to you</p>
+          <h4>Hey! Download here and start to looking for someone similar to you</h4>
           <a class="btn-Download" href="#">Download</a>
         </div>
         <div class="video">
           <!-- background-color: pink and container-fluid -->
+          <h2>Check it out, what, how..</h2>
           <img src="video.png" alt="video-what-how-is-blinder-app">
         </div>
-        <div class="app-screen-profile">
-          <img src="screen_profile_app.png" alt="app-screen-profile">
-          
+        <div class="calltoaction-bottom">
+          <h2>Why Blinder is different:</h2>
+          <img src="screen_profile_app.png" alt="img-app-screen-profile">
+          <h3>Choose your interests and we’ll find the best person for you</h3>
+          <a class="btn-Download" href="#">Download</a>
         </div>
       </main>
       <div class="separator-footer">
-        <img src="separator.png" alt="separator-footer">
+        <img src="separator.png" alt="img-separator-footer">
       </div>
       <footer>
         <!-- background-color: grey and container-fluid -->
         <bold>Blinder App</bold>
-        <p>Help</p>
-        <p>Give us your feedback</p>
-        <p>Contact</p>
+        <span>Help</span>
+        <a href="#">Give us your feedback</a>
+        <a href="#">Contact</a>
       </footer>
     </div>
   </body>
