--- a/index.html
+++ b/index.html
@@ -2,24 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
     <title>Blinder App - Dating about hobbies or interests</title>
   </head>
   <body>
     <div class="container">
       <!-- <img src="bg_top_greyscale_full.png" alt=""> -->
-      <header class="header">
-        <div class="logo-Blinder">
+      <header class="row">
+        <div class="logo-Blinder col-sm-3">
           <img src="img/logo_blinder.png" alt="img-logo-blinder-app">
         </div>
-        <div class="text-title">
+        <div class="text-title col-sm-9">
           <h1>Find your perfect match</h1>
           <h4>Discover quality profiles specifically handpicked for you.</h4>
         </div>
       </div>
       <main class="content">
         <div class="calltoaction-top">
-          <img src="mockup_mobile_app.png" alt="img-mockup-mobile-app">
+          <img src="img/mockup_mobile_app.png" alt="img-mockup-mobile-app">
           <!-- carrousel 1 to 3 pictures using bootstrap -->
           <h4>Hey! Download here and start to looking for someone similar to you</h4>
           <a class="btn-Download" href="#">Download</a>
@@ -27,17 +31,17 @@
         <div class="video">
           <!-- background-color: pink and container-fluid -->
           <h2>Check it out, what, how..</h2>
-          <img src="video.png" alt="video-what-how-is-blinder-app">
+          <img src="img/video.png" alt="video-what-how-is-blinder-app">
         </div>
         <div class="calltoaction-bottom">
           <h2>Why Blinder is different:</h2>
-          <img src="screen_profile_app.png" alt="img-app-screen-profile">
+          <img src="img/screen_profile_app.png" alt="img-app-screen-profile">
           <h3>Choose your interests and we’ll find the best person for you</h3>
           <a class="btn-Download" href="#">Download</a>
         </div>
       </main>
       <div class="separator-footer">
-        <img src="separator.png" alt="img-separator-footer">
+        <img src="img/separator.png" alt="img-separator-footer">
       </div>
       <footer>
         <!-- background-color: grey and container-fluid -->
