--- a/index.html
+++ b/index.html
@@ -10,45 +10,45 @@
     <title>Blinder App - Dating about hobbies or interests</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container content-fluid">
       <!-- <img src="bg_top_greyscale_full.png" alt=""> -->
-      <header class="row">
+      <header class="header row">
         <div class="logo-Blinder col-sm-3">
           <img src="img/logo_blinder.png" alt="img-logo-blinder-app">
         </div>
-        <div class="text-title col-sm-9">
+        <div class="text-title-subtitle col-sm-9">
           <h1>Find your perfect match</h1>
           <h4>Discover quality profiles specifically handpicked for you.</h4>
         </div>
       </div>
-      <main class="content">
-        <div class="calltoaction-top">
+      <main class="content row">
+        <div class="calltoaction-top col-sm-12">
           <img src="img/mockup_mobile_app.png" alt="img-mockup-mobile-app">
           <!-- carrousel 1 to 3 pictures using bootstrap -->
           <h4>Hey! Download here and start to looking for someone similar to you</h4>
           <a class="btn-Download" href="#">Download</a>
         </div>
-        <div class="video">
+        <div class="video col-sm-12">
           <!-- background-color: pink and container-fluid -->
           <h2>Check it out, what, how..</h2>
           <img src="img/video.png" alt="video-what-how-is-blinder-app">
         </div>
-        <div class="calltoaction-bottom">
+        <div class="calltoaction-bottom col-sm-12">
           <h2>Why Blinder is different:</h2>
           <img src="img/screen_profile_app.png" alt="img-app-screen-profile">
           <h3>Choose your interests and we’ll find the best person for you</h3>
           <a class="btn-Download" href="#">Download</a>
         </div>
       </main>
-      <div class="separator-footer">
-        <img src="img/separator.png" alt="img-separator-footer">
-      </div>
-      <footer>
-        <!-- background-color: grey and container-fluid -->
-        <bold>Blinder App</bold>
-        <span>Help</span>
-        <a href="#">Give us your feedback</a>
-        <a href="#">Contact</a>
+      <footer class="row">
+        <div class="footer col-sm-12">
+          <!-- <img src="img/separator.png" alt="img-separator-footer"> -->
+          <!-- background-color: grey and container-fluid -->
+          <bold>Blinder App</bold>
+          <span>Help</span>
+          <a href="#">Give us your feedback</a>
+          <a href="#">Contact</a>
+        </div>
       </footer>
     </div>
   </body>
