img and gradient background

--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
     <title>Blinder App - Dating about hobbies or interests</title>
   </head>
   <body>
-    <div class="container content-fluid">
-      <!-- <img src="bg_top_greyscale_full.png" alt=""> -->
+    <div class="container-fluid">
       <header class="header row">
-        <div class="logo-Blinder col-sm-3">
-          <img src="img/logo_blinder.png" alt="img-logo-blinder-app">
+        <div class="title">
+          <!-- <div class="logo-Blinder col-sm-3">
+            <img src="img/logo_blinder.png" alt="img-logo-blinder-app">
+          </div> -->
+          <div class="text-title-subtitle col-sm-12">
+            <h1>Find your perfect match</h1>
+            <h4>Discover quality profiles specifically handpicked for you.</h4>
+          </div>
         </div>
-        <div class="text-title-subtitle col-sm-9">
-          <h1>Find your perfect match</h1>
-          <h4>Discover quality profiles specifically handpicked for you.</h4>
-        </div>
-      </div>
+      </header>
       <main class="content row">
         <div class="calltoaction-top col-sm-12">
-          <img src="img/mockup_mobile_app.png" alt="img-mockup-mobile-app">
+          <img src="img/mockup_mobile_app.png" alt="img-mockup-mobile-app" width="100%">
           <!-- carrousel 1 to 3 pictures using bootstrap -->
-          <h4>Hey! Download here and start to looking for someone similar to you</h4>
-          <a class="btn-Download" href="#">Download</a>
+          <div class="text-download">
+            <h4>Hey! Download here and start to looking for someone similar to you</h4>
+            <a class="btn-Download" href="#">Download</a>
+          </div>
         </div>
         <div class="video col-sm-12">
           <!-- background-color: pink and container-fluid -->
@@ -45,9 +48,11 @@
           <!-- <img src="img/separator.png" alt="img-separator-footer"> -->
           <!-- background-color: grey and container-fluid -->
           <bold>Blinder App</bold>
-          <span>Help</span>
-          <a href="#">Give us your feedback</a>
-          <a href="#">Contact</a>
+          <ul>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Feedback</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         </div>
       </footer>
     </div>
